# atvloadly-ts-vps

./: Dockerfile  README.md  README_cn.md
internal/app/: settings.go
internal/manager/: account_manager.go  device_manager.go  device_manager_avahi.go  device_manager_usbmuxd.go  direct_device_manager.go  install_manager.go  manager.go  pair_manager.go
internal/model/: device.go  direct_device.go  message.go
internal/service/: service.go  websocket.go
locales/: en.json  zh_cn.json
tools/appletvpair/: Cargo.toml
tools/appletvpair/src/: main.rs
tools/appletvremote/: appletvremote.py
web/static/src/page/home/: index.vue
web/static/src/page/install/: index.vue
web/static/src/page/laboratory/: index.vue
web/static/src/page/pair/: index.vue
web/static/src/router/: index.js
